<resources>
    <string name="app_name">shopeklobek</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_image" translatable="false">product_image</string>
    <string name="remove_image_description" translatable="false">remove_image_description</string>
    <string name="add_image_description" translatable="false">add_image_description</string>

    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="sale">Sale</string>
    <string name="product_details">Product Details</string>
    <string name="filter">Filter</string>
    <string name="shoes">Shoes</string>
    <string name="accessories">Accessories</string>
    <string name="clothes">Clothes</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">SignUp</string>

    <string name="favorite">favorites</string>
    <string name="cart">cart</string>
    <string name="orders">orders</string>
    <string name="price">price :</string>
    <string name="state">state :</string>
    <string name="date">date :</string>
    <string name="none">None</string>
    <string name="all">All</string>
    <string name="pay_with_paypal">Pay With Paypal</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="choose_the_pay_method">Payment methods</string>
    <string name="enter_coupon_here">Add discount code</string>
    <string name="apply">Apply</string>

    <string name="full_name">Full name</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="currency">currency</string>
    <string name="egp">Egyptian Pound</string>
    <string name="sar">Saudi Riyal</string>
    <string name="usd">United States Dollar</string>
    <string name="Currency">Currency</string>

    <string name="address">Address</string>
    <string name="pound">pound</string>
    <string name="please_login">please login</string>
    <string name="login">LOGIN</string>
    <string name="search">Search....</string>
    <string name="city">City, Country*</string>
    <string name="address_line">Address Line*</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number*</string>
    <string name="set_as_default_address">Set As Default Address</string>
    <string name="cancel_it">Cancel</string>
    <string name="save">Save</string>
    <string name="sub_total">Sub Total</string>
    <string name="shipping_fees">Shipping fees</string>
    <string name="discount">Discount</string>
    <string name="total_price">Total price</string>
    <string name="shipping_address">Shipping address</string>
    <string name="order_details">Order Details</string>
    <string name="proceed_to_finish">Proceed to Confirm the Order</string>
    <string name="confirm_the_order">Confirm The Order</string>
    <string name="add_address">Add Address</string>
    <string name="default_location">Default Location</string>
    <string name="proceed_to_checkout">Proceed to Buy</string>
    <string name="items">items )</string>
    <string name="sub_totat_1">Total (</string>
    <string name="done_order_message">Done 👌, your order is on the way</string>
    <string name="ok">OK</string>
    <string name="someThing_wrong_happened">Sorry, someThing wrong happened</string>
    <string name="u_havent_login_yet">looks like u haven\'t login yet</string>
    <string name="no_discount_added">You have not added any discount code</string>
    <string name="Wrong_Code">Wrong Code</string>
    <string name="do_u_want_remove_product">Do you want remove this product?</string>
    <string name="do_u_want_remove_address">Do you want remove this Address?</string>
    <string name="product_deleted">product deleted successfully</string>
    <string name="address_deleted">address deleted successfully</string>
    <string name="no_more_stock">sorry, no more stock from this product 😞</string>

    <string name="empty" translatable="false">Empty</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup_now">SignUp Now</string>
    <string name="arabic">Arabic</string>
    <string name="settings">Settings</string>
    <string name="change_address">change address</string>
    <string name="welcome_to_shobek_lobek">Welcome to shobek lobek</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="sign_in_now">ٍsign in now</string>
    <string name="oops_you_seem_that_you_didn_t_login_or_create_an_account">Oops,You seem that you didn\'t login or create an account yet</string>
    <string name="please_login_or_create_an_account_to_complete_your_action">Please login or create an account to complete your action</string>
    <string name="sign_up">SIGN UP</string>
    <string name="egp_symbol">£</string>
    <string name="usd_symbol">$</string>
    <string name="sar_symbol">SAR</string>

    <string name="confirm_order">Confirm the order</string>

    <string-array name="checkout_stepper_list">
        <item>@string/address</item>
        <item>@string/choose_the_pay_method</item>
        <item>@string/confirm_order</item>


    </string-array>

    <string name="more">more</string>
    <string name="sighn_out">Sign out</string>
    <string name="favorite_list">favorite list</string>
    <string name="copied">Code Copied</string>
    <string name="brands">Brands</string>
    <string name="category">Categories</string>
    <string name="favorites">Favorite</string>
    <string name="search_Menu">Search</string>
    <string name="BrandsFragment">Brands</string>
    <string name="FavoriteFargment">My Favorites</string>
    <string name="CateforiesFragment">Categories</string>
    <string name="CartFragment">Cart</string>
    <string name="ProductFragment">Product Details</string>
    <string name="VendorFragment">Brand Products</string>
    <string name="last_locations">Last Locations</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="slash">/</string>
    <string name="noword"></string>
    <string name="morethan">More Than</string>
    <string name="correct_email_or_password">please enter correct email or password</string>
    <string name="success_log">Logged in Successfully</string>
    <string name="added_to_cart">Successfully added to cart</string>
    <string name="added_to_favorite">Successfully added to favorite</string>
    <string name="counter">counter</string>
    <string name="order_number">order number</string>
    <string name="phone_01066798171">phone : 01066798171</string>
    <string name="place_holder">fsdfsdfsdjddddddddddddddddddddddddddddddddd d d d d d d d d d d d dfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324c fsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324c fsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324c fsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324cfsdfsdfsdjfmiodfodsiofmdskf,pos dfeprokfer fefiwf fnwe fwefwer wer ef wef wer crfwedqwacdwe rcvwecfweqwe rcqwercqrc wecr4tcv34 wrcw4c3r qw3crq324c</string>
    <string name="errorloading">Error</string>
    <string name="errornoconnection">No Connection!</string>
    <string name="location">Location*</string>
    <string name="search_here">Search here</string>
    <string name="additional_address_details">Additional Address Details*</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="no_internet_connection">لا يوجد اتصال بالإنترنت</string>
    <string name="phone2">"phone : "</string>
    <string name="name">"name : "</string>
    <string name="counter2">"counter : "</string>
    <string name="address2">"address : "</string>
    <string name="discount2">"discount : "</string>
    <string name="email_already_exist">email Already Exist</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="required">Required</string>
    <string name="more_than_eight">password must be more than 8 characters</string>
    <string name="doesnt_exist">password doesn\'t match</string>
    <string name="server_error">Server Error</string>
    <string name="no">No</string>
    <string name="yes">yes</string>


</resources>