<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login"
            android:title="@string/login" />

        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_baseline_login"
            android:title="@string/sign_up" />
    </group>
</menu>