<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginStart="2.5dp"
        android:layout_marginTop="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_drag" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/filter"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_filter"
                android:weightSum="4">

                <RadioButton
                    android:id="@+id/womenRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:text="@string/women" />

                <RadioButton
                    android:id="@+id/kidsRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:text="@string/kids" />

                <RadioButton
                    android:id="@+id/menRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:text="@string/men" />

                <RadioButton
                    android:id="@+id/saleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:text="@string/sale" />
            </RadioGroup>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_filter">

                <RadioButton
                    android:id="@+id/allRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:text="@string/all" />

                <RadioButton
                    android:id="@+id/shoesRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="false"
                    android:text="@string/shoes" />

                <RadioButton
                    android:id="@+id/clothesRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:text="@string/clothes" />

                <RadioButton
                    android:id="@+id/accessoriesRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:text="@string/accessories" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/applyTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_bt_add_bag"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="@color/textColorOnAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>