<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.checkout.add_address.AddAddressFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:ems="10"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAddressLineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/etAddressLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:ems="10"
                    android:hint="@string/address_line"
                    android:inputType="text"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etFirstNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#00000000"
                        android:ems="10"

                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etLastNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#00000000"
                        android:ems="10"

                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:ems="10"

                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/rbSetAsDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_as_default_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#E91E63"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>