<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.brands.PriceBottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginStart="2.5dp"
        android:layout_marginTop="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_drag" />

            <TextView
                android:id="@+id/textViewFilterPrice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/filter"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="4"
            android:background="@drawable/bg_filter"
            android:orientation="horizontal"
            android:weightSum="17">

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_marginTop="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_marginBottom="2.5dp"
                android:layout_weight="4">

                <RadioButton
                    android:id="@+id/allPriceRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:text="@string/all"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/firstPriceRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:checked="false"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/shoes" />

                <RadioButton
                    android:id="@+id/secondPriceRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/clothes" />

                <RadioButton
                    android:id="@+id/thirdPriceRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/accessories" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/noword" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/slash" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/slash" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/slash" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:id="@+id/PriceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/noword" />

                <TextView
                    android:id="@+id/firstPriceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/secondPriceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/thirdPriceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/morethan"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/applyTextView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_bt_add_bag"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="@color/textColorOnAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>